Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-34057

Inconsistent FTS state in concurrent scenarios

    XMLWordPrintable

Details

    Description

      Bug#34929814 Inconsistent FTS state in concurrent scenarios
      This patch is fixing the inconsistency of FTS state including
      incorrect query results. During sync of fts table, InnoDB
      passes the transaction which was used during fts_sync_commit().

      Attachments

        Issue Links

          Activity

            People

              thiru Thirunarayanan Balathandayuthapani
              thiru Thirunarayanan Balathandayuthapani
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 1h
                  1d 1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.